--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
     "private": true,
     "homepage": "https://rusticsanta.com",
     "dependencies": {
+        "bootstrap": "^5.0.2",
+        "cloudinary-react": "^1.7.0",
         "gh-pages": "^3.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-ga": "^3.0.0",
         "react-helmet": "^6.1.0",
+        "react-icons": "^4.2.0",
+        "react-image-gallery": "^1.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
+        "react-scripts": "^4.0.3",
         "react-snapshot": "^1.3.0",
-        "semantic-ui-react": "^0.88.2",
+        "reactstrap": "^8.9.0",
         "typescript": "^3.7.5"
     },
     "scripts": {
@@ -44,14 +48,17 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "@types/bootstrap": "^5.0.17",
         "@types/jest": "^24.9.1",
+        "@types/node": "^12.12.47",
         "@types/react": "^16.9.36",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-helmet": "^6.1.2",
+        "@types/react-image-gallery": "^1.0.4",
         "@types/react-router-dom": "^5.1.5",
+        "@types/reactstrap": "^8.7.2",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "@typescript-eslint/parser": "^3.2.0",
-        "@types/node": "^12.12.47",
-        "@types/react-dom": "^16.9.8",
-        "eslint": "^6.6.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.20.0",
