--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build && react-snapshot",
         "test": "react-scripts test",
-        "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-        "eject": "react-scripts eject"
+        "lint": "npx eslint --ext .ts --ext .tsx ."
     },
     "eslintConfig": {
         "extends": "react-app"
